# qod

./: .gitignore  Dockerfile  LICENSE  README.md  docker-entrypoint.sh  pyproject.toml
src/obc_sqc/iface/: file_model_inference.py
src/obc_sqc/model/: annotation_utils.py  averaging_utils.py  constant_data_check.py  filling_ignoring_period.py  hour_averaging.py  initial_params.py  minute_averaging.py  obc_sqc_driver.py  raw_data_check.py  raw_data_checks.py
src/obc_sqc/schema/: schema.py
